[package]
name = "reth-btc-wallet"
# not using workspace so btc-server dockerfile runs correctly
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/reth"
exclude = [".github/"]

[dependencies]
anyhow = "1.0.71"
bitcoin.workspace = true
secp256k1 = { workspace = true, features = [
    "global-context",
    "rand",
    "rand-std",
    "recovery",
] }
rand = { version = "0.6", features = ["std"] }
miniscript.workspace = true
hex = "0.4.3"
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
async-trait = "0.1.73"
ethers = "2.0.10"
bitcoincore-rpc = "0.18.0"
serde = "1.0.171"
tokio = { version = "1.29.1", features = ["full"] }
thiserror = "1.0.43"

## url
url = { version = "2.2.2", features = ["serde"] }

# TODO update this to the zcash frost library when tr is merged in
frost-secp256k1-tr = { git = "https://github.com/0xBEEFCAF3/frost", branch = "additional-tweaks",  features = ["serde", "serialization"] }


[features]
# Included solely to ignore certain tests.
optimism = []