[package]
name = "reth-btc-wallet"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/reth"
exclude = [".github/"]

[dependencies]
anyhow = "1.0.71"
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
ethers = "2.0.10"
frost-secp256k1-tr = { workspace = true }
hex = "0.4.3"
lazy_static = "1.4.0"
miniscript = "11.0.0"
mockall = "0.13.1"
rand = { version = "0.6", features = ["std"] }
secp256k1 = { version = "0.28", features = ["global-context", "rand", "rand-std", "recovery"] }
serde = "1.0.171"
thiserror = "1.0.43"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"

## url
url = { version = "2.2.2", features = ["serde"] }
