[package]
name = "reth-chainspec"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]

# ethereum
alloy-chains = { workspace = true, features = ["serde", "rlp"] }
alloy-eips = { workspace = true, features = ["serde"] }
alloy-genesis = { workspace = true }
alloy-primitives = { workspace = true, features = ["rand", "rlp"] }
alloy-trie = { workspace = true }
# askama
askama = "0.12.1"

# misc dependencies
auto_impl = { workspace = true }
derive_more = { workspace = true }
once_cell = { workspace = true }

# op dependencies
op-alloy-rpc-types = { workspace = true, optional = true }

# reth dependencies
reth-ethereum-forks = { workspace = true }
reth-network-peers = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-trie-common = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
alloy-eips = { workspace = true, features = ["arbitrary"] }
alloy-genesis = { workspace = true }
alloy-rlp = { workspace = true, features = ["arrayvec"] }
# eth-related dev dependencies
alloy-trie = { workspace = true, features = ["arbitrary"] }

# op-related dev dependencies
op-alloy-rpc-types = { workspace = true }

[features]
default = ["std"]
std = []
arbitrary = ["alloy-chains/arbitrary"]
