[package]
name = "reth-config"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
eyre = { workspace = true }
humantime-serde = { workspace = true }
# reth
reth-network-types = { workspace = true, features = ["serde"] }
reth-prune-types = { workspace = true }
reth-stages-types = { workspace = true }

# serde
serde = { workspace = true }

# toml
toml = { workspace = true }

[dev-dependencies]
reth-network-peers = { workspace = true }
tempfile = { workspace = true }
