[package]
name = "reth-e2e-test-utils"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
alloy-consensus = { workspace = true, features = ["kzg"] }
alloy-network = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true, features = ["mnemonic"] }
eyre = { workspace = true }

futures-util = { workspace = true }

jsonrpsee = { workspace = true }
reth = { workspace = true }
reth-chainspec = { workspace = true }
reth-db = { workspace = true, features = ["test-utils"] }
reth-network-peers = { workspace = true }
reth-node-builder = { workspace = true, features = ["test-utils"] }
reth-payload-builder = { workspace = true, features = ["test-utils"] }
reth-primitives = { workspace = true }
reth-provider = { workspace = true }
reth-rpc-layer = { workspace = true }
reth-stages-types = { workspace = true }
reth-tokio-util = { workspace = true }
reth-tracing = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
