[package]
name = "reth-etl"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
rayon = { workspace = true }
reth-db-api = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true }
