[package]
name = "reth-primitives-traits"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "Common types in reth."

[lints]
workspace = true

[dependencies]
alloy-consensus = { workspace = true, features = ["serde"] }
alloy-eips = { workspace = true }
alloy-genesis = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rpc-types-eth = { workspace = true, optional = true }

# arbitrary utils
arbitrary = { workspace = true, features = ["derive"], optional = true }
byteorder = "1"
bytes = { workspace = true }

derive_more = { workspace = true }

modular-bitfield = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-arbitrary-interop = { workspace = true, optional = true }
reth-codecs = { workspace = true }
revm-primitives = { workspace = true, features = ["serde"] }

# misc
roaring = "0.10.2"

secp256k1 = { workspace = true, features = ["global-context", "recovery", "rand"] }
serde = { workspace = true }

[dev-dependencies]
alloy-consensus = { workspace = true, features = ["arbitrary"] }
alloy-primitives = { workspace = true, features = ["arbitrary"] }
arbitrary = { workspace = true, features = ["derive"] }
proptest = { workspace = true }
proptest-arbitrary-interop = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
test-fuzz = { workspace = true }

[features]
default = ["std"]
std = []
test-utils = ["arbitrary"]
arbitrary = [
    "std",
    "alloy-consensus/arbitrary",
    "alloy-primitives/arbitrary",
    "dep:arbitrary",
    "dep:proptest",
    "dep:proptest-arbitrary-interop",
]
alloy-compat = ["alloy-rpc-types-eth"]
